# ghost_browser

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  cookies_example.txt  doc.md  docker-compose.image.yml  docker-compose.yml  pyproject.toml  run_tests.bat  run_tests.py
.github/workflows/: ci.yml
docker/: entrypoint.sh
docs/: CHANGELOG.md  COMMUNICATION_FLOW.md  clone_workflow.md  tool_inventory.md
src/: browser_manager.py  cdp_element_cloner.py  cdp_function_executor.py  debug_logger.py  dom_handler.py  dynamic_hook_system.py  element_cloner.py  file_based_element_cloner.py  login_watcher.py  manual_login_handler.py  network_interceptor.py  persistent_storage.py  server.py
src/cli/: __init__.py  banner.py  pytest_progress_plugin.py
src/core/: __init__.py  animation_handler.py  audits_handler.py  backgroundservice_handler.py  browser_cdp_handler.py  browser_manager.py  cdp_element_cloner.py  cdp_function_executor.py  cdp_result.py  comprehensive_element_cloner.py  cookie_manager.py  css_handler.py  database_handler.py  debug_logger.py  debugger_handler.py  dom_handler.py  dom_snapshot_handler.py  dynamic_hook_ai_interface.py  dynamic_hook_system.py  element_cloner.py  fetch_handler.py  file_based_element_cloner.py  heapprofiler_handler.py  hook_learning_system.py  log_handler.py  login_guard.py  login_watcher.py  manual_login_handler.py  models.py  network_interceptor.py  output_paths.py  overlay_handler.py  persistent_storage.py  platform_utils.py  process_cleanup.py  profiler_handler.py  progressive_element_cloner.py  remote_browser_access.py  response_handler.py  security_handler.py  (+7 more)
src/tools/: __init__.py  animation_management.py  audits_management.py  backgroundservice_management.py  browser_cdp_management.py  browser_management.py  cdp_advanced.py  cdp_functions.py  cookies_storage.py  css_management.py  database_management.py  debugger_management.py  debugging.py  dom_snapshot_management.py  dynamic_hooks.py  element_extraction.py  element_interaction.py  fetch_management.py  file_extraction.py  heapprofiler_management.py  log_management.py  network_debugging.py  overlay_management.py  profiler_management.py  progressive_cloning.py  security_management.py  serviceworker_management.py  storage_cdp_management.py  storage_management.py  system_info_management.py  tabs.py  target_management.py  webauthn_management.py
tests/: README.md  __init__.py  conftest.py  test_browser_management.py  test_cdp_attributes.py  test_cookies.py  test_core_modules.py  test_element_cloners.py  test_final_smoke.py  test_instance_recovery.py  test_integration_full.py  test_javascript.py  test_login_flow.py  test_login_guard.py  test_mcp_tools.py  test_navigation.py  test_persistence.py  test_race_conditions.py  test_uncovered_tools.py
tests/e2e/: test_cdp_complete.py  test_final_smoke.py  test_integration_full.py  test_mcp_interface.py
tests/examples/: demo_visual.py
tests/integration/: test_animation_tools.py  test_audits_tools.py  test_backgroundservice_tools.py  test_browser_cdp_tools.py  test_browser_tools.py  test_css_tools.py  test_database_tools.py  test_debugger_tools.py  test_dom_snapshot_tools.py  test_element_tools.py  test_fetch_tools.py  test_heapprofiler_tools.py  test_log_tools.py  test_login_flow.py  test_navigation_flow.py  test_network_tools.py  test_overlay_tools.py  test_profiler_tools.py  test_security_tools.py  test_server_registration.py  test_serviceworker_tools.py  test_storage_cdp_tools.py  test_storage_tools.py  test_system_info_tools.py  test_target_tools.py  test_webauthn_tools.py
tests/unit/: test_animation_handler.py  test_audits_handler.py  test_cdp_raw_commands.py  (+25 more)
