[project]
name = "ghost-browser-mcp"
version = "0.5.0"
description = "Ultimate undetectable browser automation MCP server with CDP-level access"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "bu3n077xl", email = ""},
]

# Runtime dependencies
dependencies = [
    "fastmcp>=3.2.0",
    "nodriver==0.48.1",
    "pydantic==2.12.5",
    "python-dotenv==1.2.2",
    "httpx>=0.28.0",
    "py2js @ git+https://github.com/am230/py2js.git@31a83c7c25a51ab0cc3255f484a2279d26278ec3",
    "jsbeautifier==1.15.4",
    "strinpy==0.0.4",
    "strbuilder==1.1.3",
    "psutil==7.2.2",
    "pillow>=12.2.0",
    "uvicorn[standard]==0.41.0",
]

# Development dependencies (optional)
[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "black>=26.3.0",
    "isort>=8.0.1",
    "mypy>=1.19.1",
]

# Repository metadata
[project.urls]
Homepage = "https://github.com/bu3n0roots3ven/ghost-browser-mcp"
Documentation = "https://github.com/bu3n0roots3ven/ghost-browser-mcp#readme"
Repository = "https://github.com/bu3n0roots3ven/ghost-browser-mcp.git"
Issues = "https://github.com/bu3n0roots3ven/ghost-browser-mcp/issues"

# Code formatting
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
norecursedirs = ["reports"]
timeout = 45
filterwarnings = [
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::ResourceWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "browser: marks tests that require browser",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-html>=4.2.0",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.4.0",
    "bandit>=1.9.0",
    "pip-audit>=2.10.0",
    "safety>=3.6.0",
    "black>=26.3.0",
    "isort>=8.0.1",
    "mypy>=1.19.1",
]
